# mouse-jiggler

./: .gitignore  README.md  jiggler.py  pyproject.toml  requirements.txt  setup.py  test.py
mouse_jiggler/: __init__.py  jiggler.py
myenv/: pyvenv.cfg
