[project]
name = "mouse-jiggler-umairk5669"
version = "0.0.1"
authors = [
  { name="Umair Khan", email="u7khan@uwaterloo.ca" },
]
description = "PyAutoGui Mouse Jiggler"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Source = "https://github.com/UmairK5669/mouse-jiggler"